--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -44,7 +44,7 @@
             <section class="example-section" style="width: 280px;">
                 <mat-checkbox class="example-margin" (change)="acceptPP($event.checked)" style="color: rgba(255,255,255,.7);">Я принимаю условия: </mat-checkbox>
             </section>
-            <span style="color: blueviolet; cursor: pointer; margin: 10px 0;" [routerLink]="['../../privacy-policy']">Политика конфидециальности</span>
+            <span style="color: #2196F3; cursor: pointer; margin: 10px 0;" [routerLink]="['../../privacy-policy']">Политика конфидециальности</span>
 
             <div>
                 <button mat-raised-button [disabled]="regForm.invalid || regForm.disabled || !isPP" class="btn">Зарегестрироваться</button>
