--- a/src/app/auth/components/register-profile/register-profile.component.html
+++ b/src/app/auth/components/register-profile/register-profile.component.html
@@ -1,80 +1,74 @@
 <div class="container">
     <p class="title">Регистрация</p>
-    <form [formGroup]="regForm" novalidate (ngSubmit)="sendService()">
-        <div class="box">
-
-            <div>
-                <img class="avatar" [src]="croppedImage"/>
-                <input type="file" (change)="fileChangeEvent($event)"/>
-                <button mat-raised-button type="button" (click)="sendAvatar()">Сохранить</button>
-            </div>
-
-            <mat-form-field color="accent" appearance="fill" style="width: 250px;">
-                <mat-label>День рождения</mat-label>
-                <input formControlName="birthday" matInput [matDatepicker]="picker2">
-                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                <mat-datepicker #picker2 color="primary"></mat-datepicker>
-            </mat-form-field>
-
-            <div style="width: 250px; margin-bottom: 15px; color: rgba(255,255,255,.7);">
-                <mat-radio-group name="gender" formControlName="gender">
-                    <div *ngFor="let gender of genders">
-                        <mat-radio-button color="primary" [style.margin.px]="'5'" value="{{gender.value}}" [checked]="gender.check">
-                            {{gender.placeholder}}
-                        </mat-radio-button>
-                    </div>
-                </mat-radio-group>
-            </div>
-
-            <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
-                <mat-label>VK</mat-label>
-                <input matInput formControlName="vk">
-            </mat-form-field>
-
-            <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
-                <mat-label>Instagram</mat-label>
-                <input matInput formControlName="instagram">
-            </mat-form-field>
-
-            <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
-                <mat-label>YouTube</mat-label>
-                <input matInput formControlName="youtube">
-            </mat-form-field>
-
-            <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
-                <mat-label>Twitter</mat-label>
-                <input matInput formControlName="twitter">
-            </mat-form-field>
-
-            <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
-                <mat-label>Facebook</mat-label>
-                <input matInput formControlName="facebook">
-            </mat-form-field>
-
-            <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
-                <mat-label>Telegram</mat-label>
-                <input matInput formControlName="telegram">
-            </mat-form-field>
-
-            <div>
-                <button mat-raised-button [disabled]="regForm.invalid" class="btn">Отправить</button>
-            </div>
-            <p [routerLink]="['']" class="subtitle">Заполнить позже</p>
+    <div class="flex">
+        <div style="margin: 0 10px;">
+            <img [src]="croppedImage" alt="" class="avatar">
+            <button mat-raised-button (click)="openDialog()" type="button" class="btn" color="primary">Установить аватарку</button>
         </div>
-    </form>
+        <div style="margin: 0 10px;">
+        
+            <form [formGroup]="regForm" novalidate (ngSubmit)="sendService()">
+                <div class="box">
+
+                    <mat-form-field color="accent" appearance="fill" style="width: 250px;">
+                        <mat-label>День рождения</mat-label>
+                        <input formControlName="birthday" matInput [matDatepicker]="picker2">
+                        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                        <mat-datepicker #picker2 color="primary"></mat-datepicker>
+                    </mat-form-field>
+        
+                    <div style="width: 250px; margin-bottom: 15px; color: rgba(255,255,255,.7);">
+                        <mat-radio-group name="gender" formControlName="gender">
+                            <div *ngFor="let gender of genders">
+                                <mat-radio-button color="primary" [style.margin.px]="'5'" value="{{gender.value}}" [checked]="gender.check">
+                                    {{gender.placeholder}}
+                                </mat-radio-button>
+                            </div>
+                        </mat-radio-group>
+                    </div>
+        
+                    <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
+                        <mat-label>Город</mat-label>
+                        <input type="text" matInput [matAutocomplete]="auto" (change)="changeCity($event)" (input)="inputCity($event)" [formControl]="controlCity">
+                        <mat-autocomplete #auto="matAutocomplete">
+                            <mat-option *ngFor="let city of cities" [value]="city.name" (click)="saveCity(city)">
+                                {{city.name}}
+                            </mat-option>
+                        </mat-autocomplete>
+                    </mat-form-field>
+        
+                    <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;" *ngIf="isCity">
+                        <mat-label>Адрес</mat-label>
+                        <input type="text" matInput [matAutocomplete]="auto2" (input)="inputAddress($event)" [formControl]="controlAddress">
+                        <mat-autocomplete #auto2="matAutocomplete">
+                            <mat-option *ngFor="let address of addresses" [value]="address.name">
+                                {{address.name}}
+                            </mat-option>
+                        </mat-autocomplete>
+                    </mat-form-field>
+
+
+
+                    <div formArrayName="socials">
+                        <div *ngFor="let social of getFormsControls()['controls']; let i = index">
+            
+                            <div style="display: flex;">
+                                <div class="creation__box_inputs" [formGroupName]="i">
+                                    <mat-form-field class="example-full-width" appearance="fill" style="width: 220px;">
+                                        <mat-label>Вставьте url</mat-label>
+                                        <input matInput formControlName="social">
+                                    </mat-form-field>
+                                </div>
+                                <button type="button" class="creation__basket" (click)="deleteSocial(i)"></button>
+                            </div>
+                        </div>
+                    </div>
+                    <button mat-raised-button class="btn" type="button" style="margin-bottom: 10px;" color="primary" (click)="addSocial()">Добавить социальную сеть</button>
+                    
+                    <button mat-raised-button [disabled]="regForm.invalid" class="btn" color="primary">Отправить</button>
+                    <p [routerLink]="['']" class="subtitle">Заполнить позже</p>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
-
-
-
-<image-cropper
-    [imageChangedEvent]="imageChangedEvent"
-    [maintainAspectRatio]="true"
-    [aspectRatio]="1 / 1"
-    format="jpeg"
-    (imageCropped)="imageCropped($event)"
-    (imageLoaded)="imageLoaded()"
-    (cropperReady)="cropperReady()"
-    (loadImageFailed)="loadImageFailed()"
-    style="width: 300px;"
-    *ngIf="isCrop"
-></image-cropper>
