--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,27 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
-@import "../node_modules/@angular/material/prebuilt-themes/purple-green.css";
+@use '@angular/material' as mat;
+
+@include mat.core();
+
+$my-primary: mat.define-palette(mat.$blue-palette, 500);
+$my-accent: mat.define-palette(mat.$green-palette, A400);
+
+$my-theme: mat.define-dark-theme((
+    color: (primary: $my-primary, accent: $my-accent)
+));
+
+@include mat.all-component-themes($my-theme);
+
+
+
 @import '~ngx-toastr/toastr';
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
-@font-face {
-    font-family: DinProMedium;
-    src: url("./assets/fonts/637-font.otf") format("opentype");
-}
-@font-face {
-    font-family: DinProBold;
-    src: url("./assets/fonts/645-font.otf") format("opentype");
-}
-@font-face {
-    font-family: DinProItalic;
-    src: url("./assets/fonts/644-font.otf") format("opentype");
-}
-$grey: #788CA0;
-$light: #EEF5F8;
-$blue: #007EA7;
-$dark: #121218;
-$lightdark: #1C1C24;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,700&display=swap');
+$light: #FFFFFF;
+$dark: #212121;
+$blue: #2196F3;
+$lightdark: #4D61A6;
 * {
-    // font-family: 'Ubuntu', sans-serif;
-    font-family: DinProMedium;
+    font-family: 'Roboto Condensed', sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -34,7 +34,7 @@ html, body {
         background-color: $dark;
     }
     ::-webkit-scrollbar-thumb {
-        background-color: $grey;
+        background-color: $light;
         border-radius: 4px;
     }
 }
@@ -46,6 +46,5 @@ html, body {
     }
 }
 body {
-    // background-color: $dark;
-    background-image: url(./assets/img/background-image.jpg);
+    background-color: $dark;
 }
