--- a/src/app/main/components/user/user.component.html
+++ b/src/app/main/components/user/user.component.html
@@ -1,12 +1,16 @@
 <div class="container">
+    <div class="flex" style="align-items: center; justify-content: start; margin-bottom: 20px;">  
+        <p class="title" style="margin-right: 20px;">Ваш профиль</p>
+        <button mat-raised-button class="btn" type="button" [routerLink]="['../profile']">Редактировать</button>
+    </div>
     <div class="flex">
-        <img class="avatar" [src]="mydata.photo"/>
+        <img class="avatar" [src]="avatar"/>
         <div style="width: 400px;">
-            <p style="color: #fff;">Имя: {{mydata.first_name}}</p>
-            <p style="color: #fff;">Фамилия: {{mydata.last_name}}</p>
-            <p style="color: #fff;">Ник: {{mydata.username}}</p>
-            <button mat-raised-button class="btn" type="button" [routerLink]="['../profile']">Профиль</button>
-            <button mat-raised-button class="btn" type="button" [routerLink]="['../user-change']">Конфиденциальность</button>
+            <p class="text" style="color: #fff;">Имя: <span>{{mydata.first_name}}</span></p>
+            <p class="text" style="color: #fff;">Фамилия: <span>{{mydata.last_name}}</span></p>
+            <p class="text" style="color: #fff;">Ник: <span>{{mydata.username}}</span></p>
+            <p class="text" style="color: #fff;">Почта: <span>{{mydata.email}}</span></p>
+            <p class="text" style="color: #fff;">Телефон: <span>{{mydata.phone_number}}</span></p>
         </div>
     </div>
 </div>
