--- a/src/app/main/components/event-chat/event-chat.component.scss
+++ b/src/app/main/components/event-chat/event-chat.component.scss
@@ -1,27 +1,22 @@
+$light: #FFFFFF;
+$dark: #212121;
+$blue: #2196F3;
+$lightdark: #4D61A6;
 p, span {
     user-select: none;
 }
-.box__data {
-    padding: 20px;
-}
 .dangerous {
-    color: #788CA0;
+    color: $lightdark;
     user-select: none;
     margin-bottom: 10px;
 }
-.subtitle {
-    color: #EEF5F8;
-    font-size: 20px;
-    margin: 0 0 10px 0;
-    user-select: none;
-}
 .textarea {
     width: 290px;
-    color: #EEF5F8;
+    color: $light;
 }
 .icon__send {
     display: inline-block;
-    background-color: #1C1C24;
+    background-color: $dark;
     border: none;
     cursor: pointer;
 }
@@ -29,15 +24,7 @@ p, span {
     display: none;
     width: 290px;
     margin: 0 0 10px 0;
-    background-color: #007EA7;
-}
-.title__comment {
-    color: #EEF5F8;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    justify-content: center;
-    margin-bottom: 10px;
+    background-color: $blue;
 }
 .container__comment {
     max-height: 300px;
@@ -45,7 +32,7 @@ p, span {
     border-radius: 5px;
 }
 .box__comment {
-    background-color: #788CA0;
+    background-color: $lightdark;
     margin: 5px 0;
     border-radius: 5px 5px 5px 0px;
     display: inline-block;
@@ -54,17 +41,18 @@ p, span {
     max-width: 300px;
 }
 .user__comment {
-    font-size: 12px;
-    color: #121218;
+    font-size: 14px;
+    color: $dark;
 }
 .text__comment {
+    font-size: 20px;
     padding: 5px 0px;
-    color: #EEF5F8;
+    color: $light;
 }
 .time__comment {
     text-align: end;
-    font-size: 12px;
-    color: #121218;
+    font-size: 14px;
+    color: $dark;
 }
 .flex {
     display: flex;
@@ -73,9 +61,9 @@ p, span {
 .avatar {
     width: 50px;
     height: 50px;
-    border: 1px solid #191919;
+    border: 1px solid $dark;
     border-radius: 50%;
-    background-color: #FFFFFF;
+    background-color: $light;
     margin: 0 5px 0 0;
 }
 @media(max-width: 510px) {
